--- a/src/main/resources/templates/new-task-form.html
+++ b/src/main/resources/templates/new-task-form.html
@@ -2,15 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Add New Task</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
 </head>
 <body>
-<h1>Add New Task</h1>
-<form action="/tasks/new-task" method="post" th:object="${newTask}">
-    <label>Title:</label>
-    <input type="text" th:field="*{title}" required/>
-    <label>Description:</label>
-    <input type="text" th:field="*{description}"/>
-    <button type="submit">Add Task</button>
-</form>
+<div class="container">
+    <h1 class="title">Add New Task</h1>
+    <form action="/tasks/new-task" method="post" th:object="${newTask}" class="task-form">
+        <div class="form-field">
+            <label for="title" class="form-label">Title:</label>
+            <input type="text" id="title" th:field="*{title}" required class="form-input"/>
+        </div>
+        <div class="form-field">
+            <label for="description" class="form-label">Description:</label>
+            <input type="text" id="description" th:field="*{description}" class="form-input"/>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Task</button>
+    </form>
+</div>
 </body>
 </html>
