--- a/src/main/resources/templates/tasks-list.html
+++ b/src/main/resources/templates/tasks-list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tasks List</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1> Tasks List</h1>
